--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -18,7 +18,7 @@
 								   class="form-control dropdown-toggle"
 								   placeholder="Search..."
 								   maxlength="50"
-								   ng-change="InputChange(searchInput)"
+								   ng-change="InputChange(searchInput, false);"
 								   data-toggle="dropdown"
                                    type="search" />
 
