--- a/src/ZectranetBundle/Resources/views/taskAdd.html.twig
+++ b/src/ZectranetBundle/Resources/views/taskAdd.html.twig
@@ -13,10 +13,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1">
-                            <form class="form-horizontal">
+                            <form class="form-horizontal" name="formTaskAdd">
                                 <div class="form-group">
                                     <label for="add_task_name" class="control-label">Task Name:</label>
-                                    <input type="text" id="add_task_name" class="form-control" name="name" ng-model="taskModel.name" required>
+                                    <input type="text" id="add_task_name" class="form-control" name="name" ng-model="taskModel.name" ng-minlength="5" ng-maxlength="100" pattern="[A-Za-z0-9 ]{1,}" required>
+
+                                    <div ng-messages="formTaskAdd.name.$error" style="color: red;">
+                                        <span ng-message="pattern">format: "A-Z,a-z,0-9"</span>
+                                        <span ng-message="minlength">Min length of password is 5 characters</span>
+                                        <span ng-message="maxlength">Max length of password is 100 characters</span>
+                                    </div>
+
                                 </div>
 
                                 <div class="form-group">
@@ -50,10 +57,16 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="add_task_description" class="control-label">Task Description:</label>
-                                    <textarea style="resize: vertical;" id="add_task_description" class="form-control" name="description" ng-model="taskModel.description" required style="height: 100px;"></textarea>
+                                    <textarea style="resize: vertical; height: 100px;" id="add_task_description" class="form-control" name="description" ng-model="taskModel.description" ng-minlength="5" ng-maxlength="5000" required></textarea>
+
+                                    <div ng-messages="formTaskAdd.description.$error" style="color: red;">
+                                        <span ng-message="minlength">Min length of password is 5 characters</span>
+                                        <span ng-message="maxlength">Max length of password is 5000 characters</span>
+                                    </div>
+
                                 </div>
                                 <div class="form-group">
-                                    <button type="button" class="btn btn-primary" ng-click="addTask(taskModel)">Add</button>
+                                    <button type="button" class="btn btn-primary" ng-disabled="formTaskAdd.$invalid" ng-click="addTask(taskModel)">Add</button>
                                     <a class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</a>
                                 </div>
                             </form>
